--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,18 +8,22 @@
   </head>
   <body>
     <div class="outer-container">
-      <div class="inner-container">
         <div class="time-box">
-          <h2 class="direction-title">To Court Square</h2>
+          <div class="title-container">
+            <div class="line-logo">G</div>
+            <h2 class="direction-title">To Court Square</h2>
+          </div>
           <p class="time-title" id="courtSquareTime"></p>
           <p class="time-title" id="courtSquareChance"></p>
         </div>
         <div class="time-box">
-          <h2 class="direction-title">To Church Ave</h2>
+          <div class="title-container">
+            <div class="line-logo">G</div>
+            <h2 class="direction-title">To Church Ave</h2>
+          </div>
           <p class="time-title" id="churchAveTime"></p>
           <p class="time-title" id="churchAveChance"></p>
         </div>
-      </div>
     </div>
     <script src="./script.js"></script>
   </body>
