more style changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,22 +8,26 @@
   </head>
   <body>
     <div class="outer-container">
-        <div class="time-box">
-          <div class="title-container">
-            <div class="line-logo">G</div>
-            <h2 class="direction-title">To Court Square</h2>
-          </div>
-          <p class="time-title" id="courtSquareTime"></p>
+      <div class="time-box">
+        <div class="title-container">
+          <div class="line-logo">G</div>
+          <h2 class="direction-title">To Court Square</h2>
+        </div>
+        <div class="time-title-container">
+          <p class="time-title fade-in-out" id="courtSquareTime">Fetching data...</p>
           <p class="time-title" id="courtSquareChance"></p>
         </div>
-        <div class="time-box">
-          <div class="title-container">
-            <div class="line-logo">G</div>
-            <h2 class="direction-title">To Church Ave</h2>
-          </div>
-          <p class="time-title" id="churchAveTime"></p>
+      </div>
+      <div class="time-box">
+        <div class="title-container">
+          <div class="line-logo">G</div>
+          <h2 class="direction-title">To Church Ave</h2>
+        </div>
+        <div class="time-title-container">
+          <p class="time-title fade-in-out" id="churchAveTime">Fetching data...</p>
           <p class="time-title" id="churchAveChance"></p>
         </div>
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
