--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="outer-container">
+      <h1>OBVIOUS CHANGE</h1>
       <div class="time-box">
         <div class="title-container">
           <div class="line-logo">G</div>
